    - Add logo copyright info to debian/copyright.
    - Fix access floppy building with 2.6 kernel, same as root floppy was
      fixed earlier.
    - Out of space on the root floppy again. Split off a asian-root floppy.
    - Remove the pcmcia stuff from the cd-drivers floppy, it was too big.
    - Force the driver floppies to be of size FLOPPY_SIZE.

 -- Joey Hess <joeyh@debian.org>  Wed, 31 Mar 2004 16:43:13 -0500

debian-installer (20040331) unstable; urgency=low

  * Joey Hess
    - Add udebs to support pcmcia cdroms to the pkg-lists for isolinux initrd,
      and to the cd-drivers floppy.
    - Add the kernel udeb to the root floppy pkg lists. It will be removed
      from the free dring build, but this will both give us an entry for the
      kernel in the status file, to prevent anna from doing bad things, and
      also will provide a System.map for depmod to run against, fixing
      builds on 2.6 kernels.
    - Removed the demo type.
    - Changed make demo and make shell to per-type targets.
    - Fixed the uml target similarly.
    - Added a qemu target, currently it can only handle booting floppies.
    - Remove broken and useless debian-installer-demo package.
      Closes: #218560
    - Add a debian-installer-manual package, mostly to serve as the autobilder
      sentinal package.

 -- Joey Hess <joeyh@debian.org>  Tue, 30 Mar 2004 16:24:08 -0500

debian-installer (20040330) unstable; urgency=low

  * Sven Luther
    - Added powerpc-builtin-initrd.sh script to build kernels with builtin
      initrd, and actually build the initrd builtin kernels for all targets
      except powerpc-small floppies.
    - Enabled powerpc/apus nativehd and cdrom-apus targets.
  * Joey Hess
    - Some manifest fixups.
  * Colin Watson
    - Add manifest info for powerpc.
    - Document netcfg/use_dhcp in boot-parameters.txt.
    - Bump kernel version in powerpc docs to 2.4.25.
  * Vincent Sanders
    - Add boot.init to netwinder netboot target