@@ -1,4 +1,4 @@
-MEDIUM_SUPPORTED = cdrom netboot floppy hd-media
+MEDIUM_SUPPORTED = cdrom netboot floppy hd-media monolithic
 
 # The version of the kernel to use.
 KERNELVERSION = 2.4.25-1-386
