@@ -1,0 +1,11 @@
+MEDIA_TYPE = boot image
+
+TARGET = pkg-lists/standard-udebs pkg-lists/kernel-module-udebs $(INITRD) $(KERNEL) $(MINIISO)
+EXTRANAME = $(MEDIUM)/
+
+MANIFEST-INITRD = "initrd"
+MANIFEST-KERNEL = "kernel image"
+MANIFEST-MINIISO = "small bootable CD image for network install"
+
+# FIXME: Temporary fix, these files should be in a udeb!
+EXTRALIBS = /lib/libnss_dns* /lib/libresolv*
