@@ -1,5 +1,4 @@
 #include "base"
-# really needed?
 #include "kernel"
 
 # Other udebs that are needed for netboot install
